// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner Plain background renders correctly 1`] = `
<jest>
  <section
    class="ecl-banner ecl-banner--plain-background ecl-banner--m ecl-banner--full-width"
    data-ecl-auto-init="Banner"
    data-ecl-banner=""
  >
    <div
      class="ecl-container"
    >
      <div
        class="ecl-banner__container"
        data-ecl-banner-container=""
      >
        <div
          class="ecl-banner__content"
        >
          <div
            class="ecl-banner__title"
          >
            <span
              class="ecl-banner__title-text"
            >
              Lorem ipsum dolor sit amet consectetuer adipiscing.
            </span>
          </div>
          <p
            class="ecl-banner__description"
          >
            <span
              class="ecl-banner__description-text"
            >
              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequate massa quis enim donec.
            </span>
          </p>
          <div
            class="ecl-banner__cta"
          >
            <a
              class="ecl-link ecl-link--cta ecl-link--icon ecl-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                CTA link
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Banner Plain background renders correctly with extra attributes 1`] = `
<jest>
  <section
    class="ecl-banner ecl-banner--plain-background ecl-banner--m ecl-banner--full-width"
    data-ecl-auto-init="Banner"
    data-ecl-banner=""
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-container"
    >
      <div
        class="ecl-banner__container"
        data-ecl-banner-container=""
      >
        <div
          class="ecl-banner__content"
        >
          <div
            class="ecl-banner__title"
          >
            <span
              class="ecl-banner__title-text"
            >
              Lorem ipsum dolor sit amet consectetuer adipiscing.
            </span>
          </div>
          <p
            class="ecl-banner__description"
          >
            <span
              class="ecl-banner__description-text"
            >
              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequate massa quis enim donec.
            </span>
          </p>
          <div
            class="ecl-banner__cta"
          >
            <a
              class="ecl-link ecl-link--cta ecl-link--icon ecl-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                CTA link
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Banner Plain background renders correctly with extra class names 1`] = `
<jest>
  <section
    class="ecl-banner ecl-banner--plain-background ecl-banner--m ecl-banner--full-width custom-class custom-class--test"
    data-ecl-auto-init="Banner"
    data-ecl-banner=""
  >
    <div
      class="ecl-container"
    >
      <div
        class="ecl-banner__container"
        data-ecl-banner-container=""
      >
        <div
          class="ecl-banner__content"
        >
          <div
            class="ecl-banner__title"
          >
            <span
              class="ecl-banner__title-text"
            >
              Lorem ipsum dolor sit amet consectetuer adipiscing.
            </span>
          </div>
          <p
            class="ecl-banner__description"
          >
            <span
              class="ecl-banner__description-text"
            >
              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequate massa quis enim donec.
            </span>
          </p>
          <div
            class="ecl-banner__cta"
          >
            <a
              class="ecl-link ecl-link--cta ecl-link--icon ecl-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                CTA link
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Banner image - text overlay renders correctly 1`] = `
<jest>
  <section
    class="ecl-banner ecl-banner--text-overlay ecl-banner--m ecl-banner--full-width"
    data-ecl-auto-init="Banner"
    data-ecl-banner=""
  >
    <figure
      class="ecl-banner__picture-container"
    >
      <picture
        class="ecl-picture ecl-banner__picture"
        data-ecl-banner-image=""
      >
        <img
          alt="aternative text"
          class="ecl-banner__image"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image8.jpg"
        />
      </picture>
      <footer
        class="ecl-banner__credit"
      >
        <small>
          © Copyright
        </small>
      </footer>
    </figure>
    <div
      class="ecl-container"
    >
      <div
        class="ecl-banner__container"
        data-ecl-banner-container=""
      >
        <div
          class="ecl-banner__content"
        >
          <div
            class="ecl-banner__title"
          >
            <span
              class="ecl-banner__title-text"
            >
              Lorem ipsum dolor sit amet consectetuer adipiscing.
            </span>
          </div>
          <p
            class="ecl-banner__description"
          >
            <span
              class="ecl-banner__description-text"
            >
              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequate massa quis enim donec.
            </span>
          </p>
          <div
            class="ecl-banner__cta"
          >
            <a
              class="ecl-link ecl-link--cta ecl-link--icon ecl-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                CTA link
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Banner image - text-box renders correctly 1`] = `
<jest>
  <section
    class="ecl-banner ecl-banner--text-box ecl-banner--m ecl-banner--full-width"
    data-ecl-auto-init="Banner"
    data-ecl-banner=""
  >
    <figure
      class="ecl-banner__picture-container"
    >
      <picture
        class="ecl-picture ecl-banner__picture"
        data-ecl-banner-image=""
      >
        <img
          alt="alternative text"
          class="ecl-banner__image"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image8.jpg"
        />
      </picture>
      <footer
        class="ecl-banner__credit"
      >
        <small>
          © Copyright
        </small>
      </footer>
    </figure>
    <div
      class="ecl-container"
    >
      <div
        class="ecl-banner__container"
        data-ecl-banner-container=""
      >
        <div
          class="ecl-banner__content"
        >
          <div
            class="ecl-banner__title"
          >
            <span
              class="ecl-banner__title-text"
            >
              Lorem ipsum dolor sit amet consectetuer adipiscing.
            </span>
          </div>
          <p
            class="ecl-banner__description"
          >
            <span
              class="ecl-banner__description-text"
            >
              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequate massa quis enim donec.
            </span>
          </p>
          <div
            class="ecl-banner__cta"
          >
            <a
              class="ecl-link ecl-link--cta ecl-link--icon ecl-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                CTA link
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Banner image renders correctly with extra attributes 1`] = `
<jest>
  <section
    class="ecl-banner ecl-banner--text-box ecl-banner--m ecl-banner--full-width"
    data-ecl-auto-init="Banner"
    data-ecl-banner=""
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <figure
      class="ecl-banner__picture-container"
    >
      <picture
        class="ecl-picture ecl-banner__picture"
        data-ecl-banner-image=""
      >
        <img
          alt="alternative text"
          class="ecl-banner__image"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image8.jpg"
        />
      </picture>
      <footer
        class="ecl-banner__credit"
      >
        <small>
          © Copyright
        </small>
      </footer>
    </figure>
    <div
      class="ecl-container"
    >
      <div
        class="ecl-banner__container"
        data-ecl-banner-container=""
      >
        <div
          class="ecl-banner__content"
        >
          <div
            class="ecl-banner__title"
          >
            <span
              class="ecl-banner__title-text"
            >
              Lorem ipsum dolor sit amet consectetuer adipiscing.
            </span>
          </div>
          <p
            class="ecl-banner__description"
          >
            <span
              class="ecl-banner__description-text"
            >
              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequate massa quis enim donec.
            </span>
          </p>
          <div
            class="ecl-banner__cta"
          >
            <a
              class="ecl-link ecl-link--cta ecl-link--icon ecl-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                CTA link
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Banner image renders correctly with extra class names 1`] = `
<jest>
  <section
    class="ecl-banner ecl-banner--text-box ecl-banner--m ecl-banner--full-width custom-class custom-class--test"
    data-ecl-auto-init="Banner"
    data-ecl-banner=""
  >
    <figure
      class="ecl-banner__picture-container"
    >
      <picture
        class="ecl-picture ecl-banner__picture"
        data-ecl-banner-image=""
      >
        <img
          alt="alternative text"
          class="ecl-banner__image"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image8.jpg"
        />
      </picture>
      <footer
        class="ecl-banner__credit"
      >
        <small>
          © Copyright
        </small>
      </footer>
    </figure>
    <div
      class="ecl-container"
    >
      <div
        class="ecl-banner__container"
        data-ecl-banner-container=""
      >
        <div
          class="ecl-banner__content"
        >
          <div
            class="ecl-banner__title"
          >
            <span
              class="ecl-banner__title-text"
            >
              Lorem ipsum dolor sit amet consectetuer adipiscing.
            </span>
          </div>
          <p
            class="ecl-banner__description"
          >
            <span
              class="ecl-banner__description-text"
            >
              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequate massa quis enim donec.
            </span>
          </p>
          <div
            class="ecl-banner__cta"
          >
            <a
              class="ecl-link ecl-link--cta ecl-link--icon ecl-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                CTA link
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;
